[package]
name = "life"
version = "0.1.0"
authors = ["Mart <themcman@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
bevy_prototype_debug_lines = "0.3.1"
rand = "0.7.3"

[profile.release]
opt-level = 'z'
lto = true
panic = 'abort'
